@@ -33,6 +33,18 @@ const pathsOverlap = (aPath: string, bPath: string): boolean => {
   return a.startsWith(bPrefix) || b.startsWith(aPrefix);
 };
 
+const assertDirectoryPathOrMissing = (targetPath: string, codeBase: string): boolean => {
+  if (!fs.existsSync(targetPath)) return true;
+  try {
+    if (fs.statSync(targetPath).isDirectory()) return true;
+    console.error(`[${codeBase}_NOT_DIRECTORY] --out must be a directory path or a missing path.`);
+    return false;
+  } catch {
+    console.error(`[${codeBase}_INVALID] unable to inspect --out path.`);
+    return false;
+  }
+};
+
 const dedupeSort = (values: string[]): string[] =>
   stableSortUniqueStringsV0(values.filter((v) => typeof v === "string" && v.length > 0));
 
@@ -545,6 +557,9 @@ export const runCompareCliV0 = (options: RunCompareCliOptionsV0): number => {
   const outRoot = path.resolve(process.cwd(), options.outRoot);
   if (pathsOverlap(outRoot, leftRoot) || pathsOverlap(outRoot, rightRoot)) {
     console.error("[COMPARE_OUT_CONFLICTS_INPUT] --out must not equal or overlap left/right roots.");
+    return 40;
+  }
+  if (!assertDirectoryPathOrMissing(outRoot, "COMPARE_OUT_PATH")) {
     return 40;
   }
   const leftLoaded = loadCompareSourceV0(options.leftRoot, "left");
